content/docs/9500_python-api/9000_versions/v0.2.9/splitgraph.hooks.mdx

import "@splitgraph/design/css/sphinxtheme.css";

export const meta = {
  title: "splitgraph.hooks package",
  id: "splitgraph.hooks package"
};

<div className=" rst-content"><nav className="toc"><ol className="toc-level toc-level-1"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#module-contents">Module contents</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#subpackages">Subpackages</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#submodules">Submodules</a><ol className="toc-level toc-level-2"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphhooksexternal_objects-module">splitgraph.hooks.external_objects module</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphhooksmount_handlers-module">splitgraph.hooks.mount_handlers module</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphhookss3-module">splitgraph.hooks.s3 module</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphhookss3_server-module">splitgraph.hooks.s3_server module</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphhookssplitfile_commands-module">splitgraph.hooks.splitfile_commands module</a></li></ol></li></ol></nav><div className="section" id="module-splitgraph.hooks">
<span id="module-contents"></span><h2 id="module-contents">Module contents<a className="headerlink" href="#module-splitgraph.hooks" title="Permalink to this headline">¶</a></h2>
<p>Various hooks for extending Splitgraph, including:</p>
<blockquote>
<div><ul className="simple">
<li><p>External object handlers (<a className="reference internal" href="#module-splitgraph.hooks.external_objects" title="splitgraph.hooks.external_objects"><code className="xref py py-mod docutils literal notranslate"><span className="pre">splitgraph.hooks.external_objects</span></code></a>) allowing to download/upload objects
to locations other than the remote Splitgraph engine.</p></li>
<li><p>Data sources (<code className="xref py py-mod docutils literal notranslate"><span className="pre">splitgraph.hooks.data_sources</span></code>) that allow to add data to Splitgraph, e.g.</p></li>
</ul>
<blockquote>
<div><p>using the Postgres engine’s FDW interface to mount other external databases on the engine.</p>
</div></blockquote>
<ul className="simple">
<li><p>Splitfile commands (<a className="reference internal" href="#module-splitgraph.hooks.splitfile_commands" title="splitgraph.hooks.splitfile_commands"><code className="xref py py-mod docutils literal notranslate"><span className="pre">splitgraph.hooks.splitfile_commands</span></code></a>) to define custom data transformation steps
compatible with the Splitfile framework.</p></li>
</ul>
</div></blockquote>
</div><div className="section" id="splitgraph-hooks-package">

<div className="section" id="subpackages">
<h2 id="subpackages">Subpackages<a className="headerlink" href="#subpackages" title="Permalink to this headline">¶</a></h2>
<div className="toctree-wrapper compound">
<ul>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.hooks.data_source/">splitgraph.hooks.data_source package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks.data_source/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks.data_source/#module-splitgraph.hooks.data_source.base">splitgraph.hooks.data_source.base module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks.data_source/#module-splitgraph.hooks.data_source.fdw">splitgraph.hooks.data_source.fdw module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks.data_source/#module-splitgraph.hooks.data_source">Module contents</a></li>
</ul>
</li>
</ul>
</div>
</div>
<div className="section" id="submodules">
<h2 id="submodules">Submodules<a className="headerlink" href="#submodules" title="Permalink to this headline">¶</a></h2>
</div>
<div className="section" id="module-splitgraph.hooks.external_objects">
<span id="splitgraph-hooks-external-objects-module"></span><h2 id="splitgraphhooksexternal_objects-module">splitgraph.hooks.external_objects module<a className="headerlink" href="#module-splitgraph.hooks.external_objects" title="Permalink to this headline">¶</a></h2>
<p>Hooks for registering handlers to upload/download objects from external locations into Splitgraph’s cache.</p>
<dl className="py class">
<dt id="splitgraph.hooks.external_objects.ExternalObjectHandler">
<em className="property"><span className="pre">class</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.external_objects.</span></code><code className="sig-name descname"><span className="pre">ExternalObjectHandler</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">params</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">Any</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.hooks.external_objects.ExternalObjectHandler" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <code className="xref py py-class docutils literal notranslate"><span className="pre">object</span></code></p>
<p>Framework for allowing to dump objects from the Splitgraph cache to an external location. This allows
the objects to be stored somewhere other than the actual remote engine.</p>
<p>External object handlers must extend this class and be registered in the Splitgraph config.</p>
<p>For an example of how this can be used, see splitgraph.hooks.s3: it’s a handler allowing objects to be
uploaded to S3/S3-compatible host using the Minio API. It’s registered in the config as follows:</p>
<div className="highlight-default notranslate"><div className="highlight"><pre><span></span><span className="p">[</span><span className="n">external_handlers</span><span className="p">]</span>
<span className="n">S3</span><span className="o">=</span><span className="n">splitgraph</span><span className="o">.</span><span className="n">hooks</span><span className="o">.</span><span className="n">s3</span><span className="o">.</span><span className="n">S3ExternalObjectHandler</span>
</pre></div>
</div>
<p>The protocol and the URLs returned by this handler are stored in splitgraph_meta.external_objects
and used to download the objects back into the Splitgraph cache when they are needed.</p>
<dl className="py method">
<dt id="splitgraph.hooks.external_objects.ExternalObjectHandler.download_objects">
<code className="sig-name descname"><span className="pre">download_objects</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">objects</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">Tuple</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">remote_engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PsycopgEngine</span></span></em><span className="sig-paren">)</span> → <span className="pre">Sequence</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><a className="headerlink" href="#splitgraph.hooks.external_objects.ExternalObjectHandler.download_objects" title="Permalink to this definition">¶</a></dt>
<dd><p>Download objects from the external location into the Splitgraph cache.</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>objects</strong> – List of tuples <cite>(object_id, object_url)</cite> that this handler had previosly
uploaded the objects to.</p></li>
<li><p><strong>remote_engine</strong> – An instance of Engine class that the objects will be registered on</p></li>
</ul>
</dd>
<dt className="field-even">Returns</dt>
<dd className="field-even"><p>A list of object IDs that have been successfully downloaded.</p>
</dd>
</dl>
</dd></dl>

<dl className="py method">
<dt id="splitgraph.hooks.external_objects.ExternalObjectHandler.upload_objects">
<code className="sig-name descname"><span className="pre">upload_objects</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">objects</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">remote_engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PsycopgEngine</span></span></em><span className="sig-paren">)</span> → <span className="pre">Sequence</span><span className="p"><span className="pre">[</span></span><span className="pre">Tuple</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><a className="headerlink" href="#splitgraph.hooks.external_objects.ExternalObjectHandler.upload_objects" title="Permalink to this definition">¶</a></dt>
<dd><p>Upload objects from the Splitgraph cache to an external location</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>objects</strong> – List of object IDs to upload</p></li>
<li><p><strong>remote_engine</strong> – An instance of Engine class that the objects will be registered on</p></li>
</ul>
</dd>
<dt className="field-even">Returns</dt>
<dd className="field-even"><p>A list of successfully uploaded object IDs and URLs they can be found at.</p>
</dd>
</dl>
</dd></dl>

</dd></dl>

<dl className="py function">
<dt id="splitgraph.hooks.external_objects.get_external_object_handler">
<code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.external_objects.</span></code><code className="sig-name descname"><span className="pre">get_external_object_handler</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">name</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">handler_params</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">Any</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span> → <a className="reference internal" href="#splitgraph.hooks.external_objects.ExternalObjectHandler" title="splitgraph.hooks.external_objects.ExternalObjectHandler"><span className="pre">splitgraph.hooks.external_objects.ExternalObjectHandler</span></a><a className="headerlink" href="#splitgraph.hooks.external_objects.get_external_object_handler" title="Permalink to this definition">¶</a></dt>
<dd><p>Load an external protocol handler by its name, initializing it with optional parameters.</p>
</dd></dl>

<dl className="py function">
<dt id="splitgraph.hooks.external_objects.register_upload_download_handler">
<code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.external_objects.</span></code><code className="sig-name descname"><span className="pre">register_upload_download_handler</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">name</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">handler_class</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Callable</span><span className="p"><span className="pre">[</span></span><span className="p"><span className="pre">[</span></span><span className="p"><span className="pre">…</span></span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">,</span> </span><a className="reference internal" href="#splitgraph.hooks.external_objects.ExternalObjectHandler" title="splitgraph.hooks.external_objects.ExternalObjectHandler"><span className="pre">splitgraph.hooks.external_objects.ExternalObjectHandler</span></a><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span> → <span className="pre">None</span><a className="headerlink" href="#splitgraph.hooks.external_objects.register_upload_download_handler" title="Permalink to this definition">¶</a></dt>
<dd><p>Register an external protocol handler. See the docstring for <cite>get_upload_download_handler</cite> for the required
signatures of the handler functions.</p>
</dd></dl>

</div>
<div className="section" id="module-splitgraph.hooks.mount_handlers">
<span id="splitgraph-hooks-mount-handlers-module"></span><h2 id="splitgraphhooksmount_handlers-module">splitgraph.hooks.mount_handlers module<a className="headerlink" href="#module-splitgraph.hooks.mount_handlers" title="Permalink to this headline">¶</a></h2>
<p>Extra wrapper code for mount handlers</p>
<dl className="py function">
<dt id="splitgraph.hooks.mount_handlers.mount">
<code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.mount_handlers.</span></code><code className="sig-name descname"><span className="pre">mount</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">mountpoint</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">mount_handler</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">handler_kwargs</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">overwrite</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">bool</span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">True</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">tables</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">TableInfo</span><span className="p"><span className="pre">]</span></span></span> <span className="o"><span className="pre">=</span></span> <span className="default_value"><span className="pre">None</span></span></em><span className="sig-paren">)</span> → <span className="pre">None</span><a className="headerlink" href="#splitgraph.hooks.mount_handlers.mount" title="Permalink to this definition">¶</a></dt>
<dd><p>Mounts a foreign database via an FDW (without creating new Splitgraph objects)</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>mountpoint</strong> – Mountpoint to import the new tables into.</p></li>
<li><p><strong>mount_handler</strong> – The type of the mounted database.</p></li>
<li><p><strong>handler_kwargs</strong> – Dictionary of options to pass to the mount handler.</p></li>
<li><p><strong>overwrite</strong> – Delete the foreign server if it already exists. Used by mount_postgres for data pulls.</p></li>
<li><p><strong>tables</strong> – List of tables to mount or their schemas</p></li>
</ul>
</dd>
</dl>
</dd></dl>

<dl className="py function">
<dt id="splitgraph.hooks.mount_handlers.mount_postgres">
<code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.mount_handlers.</span></code><code className="sig-name descname"><span className="pre">mount_postgres</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">mountpoint</span></span></em>, <em className="sig-param"><span className="o"><span className="pre">**</span></span><span className="n"><span className="pre">kwargs</span></span></em><span className="sig-paren">)</span> → <span className="pre">None</span><a className="headerlink" href="#splitgraph.hooks.mount_handlers.mount_postgres" title="Permalink to this definition">¶</a></dt>
<dd><p>Mount a Postgres database.</p>
<p>Mounts a schema on a remote Postgres database as a set of foreign tables locally.
</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>mountpoint</strong> – Schema to mount the remote into.</p></li>
<li><p><strong>server</strong> – Database hostname.</p></li>
<li><p><strong>port</strong> – Port the Postgres server is running on.</p></li>
<li><p><strong>username</strong> – A read-only user that the database will be accessed as.</p></li>
<li><p><strong>password</strong> – Password for the read-only user.</p></li>
<li><p><strong>dbname</strong> – Remote database name.</p></li>
<li><p><strong>remote_schema</strong> – Remote schema name.</p></li>
<li><p><strong>extra_server_args</strong> – Dictionary of extra arguments to pass to the foreign server</p></li>
<li><p><strong>tables</strong> – Tables to mount (default all). If a list, then will use IMPORT FOREIGN SCHEMA.</p></li>
</ul>
</dd>
</dl>
<p>If a dictionary, must have the format &#38;lbrace;“table_name”: &#38;lbrace;“col_1”: “type_1”, …&#38;rbrace;&#38;rbrace;.</p>
</dd></dl>

</div>
<div className="section" id="module-splitgraph.hooks.s3">
<span id="splitgraph-hooks-s3-module"></span><h2 id="splitgraphhookss3-module">splitgraph.hooks.s3 module<a className="headerlink" href="#module-splitgraph.hooks.s3" title="Permalink to this headline">¶</a></h2>
<p>Plugin for uploading Splitgraph objects from the cache to an external S3-like object store</p>
<dl className="py class">
<dt id="splitgraph.hooks.s3.S3ExternalObjectHandler">
<em className="property"><span className="pre">class</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.s3.</span></code><code className="sig-name descname"><span className="pre">S3ExternalObjectHandler</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">params</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Dict</span><span className="p"><span className="pre">[</span></span><span className="pre">Any</span><span className="p"><span className="pre">,</span> </span><span className="pre">Any</span><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.hooks.s3.S3ExternalObjectHandler" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.hooks.external_objects.ExternalObjectHandler" title="splitgraph.hooks.external_objects.ExternalObjectHandler"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.hooks.external_objects.ExternalObjectHandler</span></code></a></p>
<p>Uploads/downloads the objects to/from S3/S3-compatible host using the Minio client.</p>
<p>The handler is “attached” to a given registry which manages issuing pre-signed
GET/PUT URLs.</p>
<p>The handler supports a parameter <cite>threads</cite> specifying the number of threads
used to upload the objects.</p>
<dl className="py method">
<dt id="splitgraph.hooks.s3.S3ExternalObjectHandler.download_objects">
<code className="sig-name descname"><span className="pre">download_objects</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">objects</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">Tuple</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">remote_engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PsycopgEngine</span></span></em><span className="sig-paren">)</span> → <span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><a className="headerlink" href="#splitgraph.hooks.s3.S3ExternalObjectHandler.download_objects" title="Permalink to this definition">¶</a></dt>
<dd><p>Download objects from Minio.</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><p><strong>objects</strong> – List of (object ID, object URL (object ID it’s stored under))</p>
</dd>
</dl>
</dd></dl>

<dl className="py method">
<dt id="splitgraph.hooks.s3.S3ExternalObjectHandler.upload_objects">
<code className="sig-name descname"><span className="pre">upload_objects</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">objects</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">remote_engine</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">PsycopgEngine</span></span></em><span className="sig-paren">)</span> → <span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">Tuple</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">,</span> </span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><a className="headerlink" href="#splitgraph.hooks.s3.S3ExternalObjectHandler.upload_objects" title="Permalink to this definition">¶</a></dt>
<dd><p>Upload objects to Minio</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>remote_engine</strong> – Remote Engine class</p></li>
<li><p><strong>objects</strong> – List of object IDs to upload</p></li>
</ul>
</dd>
<dt className="field-even">Returns</dt>
<dd className="field-even"><p>List of tuples with successfully uploaded objects and their URLs.</p>
</dd>
</dl>
</dd></dl>

</dd></dl>

<dl className="py function">
<dt id="splitgraph.hooks.s3.get_object_download_urls">
<code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.s3.</span></code><code className="sig-name descname"><span className="pre">get_object_download_urls</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">remote_engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">remote_object_ids</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.hooks.s3.get_object_download_urls" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

<dl className="py function">
<dt id="splitgraph.hooks.s3.get_object_upload_urls">
<code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.s3.</span></code><code className="sig-name descname"><span className="pre">get_object_upload_urls</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">remote_engine</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">objects</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.hooks.s3.get_object_upload_urls" title="Permalink to this definition">¶</a></dt>
<dd></dd></dl>

</div>
<div className="section" id="module-splitgraph.hooks.s3_server">
<span id="splitgraph-hooks-s3-server-module"></span><h2 id="splitgraphhookss3_server-module">splitgraph.hooks.s3_server module<a className="headerlink" href="#module-splitgraph.hooks.s3_server" title="Permalink to this headline">¶</a></h2>
<p>S3 registry-side routines called from the Python stored procedure
that are aware of the actual S3 access creds and generate pre-signed
URLs to upload/download objects.</p>
<dl className="py function">
<dt id="splitgraph.hooks.s3_server.delete_objects">
<code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.s3_server.</span></code><code className="sig-name descname"><span className="pre">delete_objects</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">client</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">minio.api.Minio</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">object_ids</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span> → <span className="pre">None</span><a className="headerlink" href="#splitgraph.hooks.s3_server.delete_objects" title="Permalink to this definition">¶</a></dt>
<dd><p>Delete objects stored in Minio</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>client</strong> – Minio client</p></li>
<li><p><strong>object_ids</strong> – List of Splitgraph object IDs to delete</p></li>
</ul>
</dd>
</dl>
</dd></dl>

<dl className="py function">
<dt id="splitgraph.hooks.s3_server.get_object_download_urls">
<code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.s3_server.</span></code><code className="sig-name descname"><span className="pre">get_object_download_urls</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">s3_host</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">object_ids</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span> → <span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><a className="headerlink" href="#splitgraph.hooks.s3_server.get_object_download_urls" title="Permalink to this definition">¶</a></dt>
<dd><p>Return a list of pre-signed URLs that each part of an object can be downloaded from.</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>s3_host</strong> – S3 host that the objects are stored on</p></li>
<li><p><strong>object_ids</strong> – List of object IDs</p></li>
</ul>
</dd>
<dt className="field-even">Returns</dt>
<dd className="field-even"><p>A list of lists [(object URL, object footer URL, object schema URL)]</p>
</dd>
</dl>
</dd></dl>

<dl className="py function">
<dt id="splitgraph.hooks.s3_server.get_object_upload_urls">
<code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.s3_server.</span></code><code className="sig-name descname"><span className="pre">get_object_upload_urls</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">s3_host</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">str</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">object_ids</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span> → <span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><span className="p"><span className="pre">]</span></span><a className="headerlink" href="#splitgraph.hooks.s3_server.get_object_upload_urls" title="Permalink to this definition">¶</a></dt>
<dd><p>Return a list of pre-signed URLs that each part of an object can be downloaded from.</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>s3_host</strong> – S3 host that the objects are stored on</p></li>
<li><p><strong>object_ids</strong> – List of object IDs</p></li>
</ul>
</dd>
<dt className="field-even">Returns</dt>
<dd className="field-even"><p>A list of lists [(object URL, object footer URL, object schema URL)]</p>
</dd>
</dl>
</dd></dl>

<dl className="py function">
<dt id="splitgraph.hooks.s3_server.list_objects">
<code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.s3_server.</span></code><code className="sig-name descname"><span className="pre">list_objects</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">client</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">minio.api.Minio</span></span></em><span className="sig-paren">)</span> → <span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span><a className="headerlink" href="#splitgraph.hooks.s3_server.list_objects" title="Permalink to this definition">¶</a></dt>
<dd><p>List objects stored in Minio</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><p><strong>client</strong> – Minio client</p>
</dd>
<dt className="field-even">Returns</dt>
<dd className="field-even"><p>List of Splitgraph object IDs</p>
</dd>
</dl>
</dd></dl>

</div>
<div className="section" id="module-splitgraph.hooks.splitfile_commands">
<span id="splitgraph-hooks-splitfile-commands-module"></span><h2 id="splitgraphhookssplitfile_commands-module">splitgraph.hooks.splitfile_commands module<a className="headerlink" href="#module-splitgraph.hooks.splitfile_commands" title="Permalink to this headline">¶</a></h2>
<p>A framework for custom Splitfile commands. The execution flow is as follows:</p>
<blockquote>
<div><ul>
<li><p>When the Splitfile executor finds an unknown command, it looks for an entry in the config file:</p>
<div className="highlight-default notranslate"><div className="highlight"><pre><span></span><span className="p">[</span><span className="n">commands</span><span className="p">]</span>
<span className="n">RUN</span><span className="o">=</span><span className="n">splitgraph</span><span className="o">.</span><span className="n">plugins</span><span className="o">.</span><span className="n">Run</span>
</pre></div>
</div>
</li>
<li><p>The command class must extend this class, initialized at every invocation time.</p></li>
<li><p>The command’s <cite>calc_hash()</cite> method is run. The resultant command context hash is combined with the current
image hash to produce the new image hash: if it already exists, then the image is simply checked out.</p></li>
<li><p>Otherwise (or if calc_hash is undefined or returns None), <cite>execute()</cite>, where the actual command should be
implemented, is run. If it returns a hash, this hash is used for the new image. If this hash already exists,
the existing image is checked out instead. If the command returns None, a random hash is generated for the
new image.</p></li>
</ul>
</div></blockquote>
<dl className="py class">
<dt id="splitgraph.hooks.splitfile_commands.PluginCommand">
<em className="property"><span className="pre">class</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.hooks.splitfile_commands.</span></code><code className="sig-name descname"><span className="pre">PluginCommand</span></code><a className="headerlink" href="#splitgraph.hooks.splitfile_commands.PluginCommand" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <code className="xref py py-class docutils literal notranslate"><span className="pre">object</span></code></p>
<p>Base class for custom Splitfile commands.</p>
<dl className="py method">
<dt id="splitgraph.hooks.splitfile_commands.PluginCommand.calc_hash">
<code className="sig-name descname"><span className="pre">calc_hash</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">repository</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">args</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.hooks.splitfile_commands.PluginCommand.calc_hash" title="Permalink to this definition">¶</a></dt>
<dd><p>Calculates the command context hash for this custom command. If either the command context hash or the
previous image hash has changed, then the image hash produced by this command will change.
Consequently, two commands with the same command context hashes are assumed to have the same effect
on any Splitgraph images.</p>
<p>This is supposed to be a lightweight method intended for pre-flight image hash calculations
(without performing the actual transformation). If it returns None, the actual transformation is run anyway.</p>
<p>For example, for a command that imports some data from an external URL, this could be the hash of the last
modified timestamp provided by the external data vendor. If the timestamp is unchanged, the data is unchanged
and so actual command won’t be re-executed.</p>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>repository</strong> – SG Repository object pointed to a schema with the checked out image
the command is being run against.</p></li>
<li><p><strong>args</strong> – Positional arguments to the command</p></li>
</ul>
</dd>
<dt className="field-even">Returns</dt>
<dd className="field-even"><p>Command context hash (a string of 64 hexadecimal digits)</p>
</dd>
</dl>
</dd></dl>

<dl className="py method">
<dt id="splitgraph.hooks.splitfile_commands.PluginCommand.execute">
<code className="sig-name descname"><span className="pre">execute</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">repository</span></span></em>, <em className="sig-param"><span className="n"><span className="pre">args</span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.hooks.splitfile_commands.PluginCommand.execute" title="Permalink to this definition">¶</a></dt>
<dd><p>Execute the custom command against the target schema, optionally returning the new image hash. The contract
for the command is as follows (though it is not currently enforced by the runtime):</p>
<blockquote>
<div><ul className="simple">
<li><p>Has to use get_engine().run_sql (or run_sql_batch) to interact with the engine.</p></li>
<li><p>Can only write to the schema with the checked-out repository (run_sql runs non-schema-qualified
statements against the correct schema).</p></li>
<li><p>Can inspect splitgraph_meta (e.g. to find the current HEAD) for the repository.</p></li>
<li><p>Can’t alter the versioning of the repository.</p></li>
</ul>
</div></blockquote>
<dl className="field-list simple">
<dt className="field-odd">Parameters</dt>
<dd className="field-odd"><ul className="simple">
<li><p><strong>repository</strong> – SG Repository object pointed to a schema with the checked out image
the command is being run against.</p></li>
<li><p><strong>args</strong> – Positional arguments to the command</p></li>
</ul>
</dd>
<dt className="field-even">Returns</dt>
<dd className="field-even"><p>Command context hash (a string of 64 hexadecimal digits). If calc_hash() had previously returned
a hash, this hash is ignored. If both this command and calc_hash() return None, the hash is randomly
generated.</p>
</dd>
</dl>
</dd></dl>

</dd></dl>

</div>

</div>
</div>